fix: adjust position of timeline start circle for better alignment

--- a/src/assets/styles/Experience/Experience.css
+++ b/src/assets/styles/Experience/Experience.css
@@ -28,7 +28,7 @@
 .timeline-start-circle {
     position: absolute;
     bottom: -20px;
-    left: 49.25%;
+    left: 49.35%;
     transform: translateX(-50%);
     width: 16px;
     height: 16px;
